<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.cspack.todo1.todoapp.EditActivity">

    <TextView
        android:id="@+id/txtRename"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="?android:attr/textColorTertiary"
        android:textAlignment="viewStart"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/edit_item_below"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/editText"
        android:textStyle="normal|bold"
        android:fontFamily="casual"
        android:maxLines="1"
        android:layout_below="@+id/txtRename"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:elevation="2dp"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:id="@+id/textView2"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignParentStart="true"
        android:text="@string/set_priority"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/editText"
        android:id="@+id/radPriority"
        android:elevation="1dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPriorityHigh"
            android:text="@string/priority_high"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPriorityMedium"
            android:text="@string/priority_medium"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPriorityLow"
            android:text="@string/priority_low"/>
    </RadioGroup>

    <Button
        android:text="@string/save_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:layout_below="@+id/radPriority"
        android:layout_alignStart="@+id/radPriority"/>
</RelativeLayout>
